# sidebundle

./: .gitignore  Cargo.toml  README.md  README.zh.md  flake.nix
.github/workflows/: bwrap-smoke.yml  bwrap-static.yml  ci.yml  release.yml  smoke-test.yml
docs/: bwrap.md  bwrap_en.md  faq.md  install.md  install_en.md  special_handling.md  tracing.md  tracing_en.md  usage.md  usage_en.md
scripts/: HelloSidebundle.java  build-static-bwrap.sh  bwrap_smoke.sh  demo_one_stop.sh  host_smoke.sh  ptrace_child_probe_smoke.sh  ptrace_thread_probe_smoke.sh  verify-static-bwrap.sh
sidebundle-cli/: Cargo.toml
sidebundle-cli/src/: agent.rs  main.rs
sidebundle-closure/: Cargo.toml
sidebundle-closure/src/: image.rs  lib.rs  linker.rs  trace.rs  validator.rs
sidebundle-closure/src/trace/: agent.rs  linux.rs
sidebundle-closure/tests/fixtures/: scip-java
sidebundle-core/: Cargo.toml
sidebundle-core/src/: elf.rs  lib.rs
sidebundle-launcher/: Cargo.toml
sidebundle-launcher/src/: main.rs
sidebundle-packager/: Cargo.toml  build.rs
sidebundle-packager/src/: launcher.rs  launcher_template.rs  lib.rs  shim.rs
