[package]
name = "sidebundle-launcher"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
sidebundle-core = { path = "../sidebundle-core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
